# mof1

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/mof1/: app.py  app.tcss  live.py  main.py  models.py  service.py  widgets.py
src/mof1/core/: __init__.py  models.py
src/mof1/data/: __init__.py  fastf1_service.py
src/mof1/live_timing/: __init__.py  client.py
src/mof1/ui/: __init__.py  render.py
tests/: test_live.py  test_main.py  test_models.py  test_widgets.py
