[project]
name = "mof1"
version = "0.1.0"
description = "mof1: a Textual TUI for current and historical Formula 1 session status."
readme = "README.md"
authors = [
    { name = "jingfelix", email = "jingfelix@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.8.1",
    "textual>=8.0.2",
]

[project.scripts]
mof1 = "mof1:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
