[project]
name = "mof1"
version = "0.1.1"
description = "mof1: a Textual TUI for current and historical Formula 1 session status."
readme = "README.md"
authors = [
    { name = "jingfelix", email = "jingfelix@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.8.1",
    "requests>=2.32.5",
    "textual>=8.0.2",
    "websocket-client>=1.9.0",
]

[project.scripts]
mof1 = "mof1:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python = ".venv"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    ".venv",
    "__pycache__",
]
